# ArchitectureDiagram

./: .gitignore  pyproject.toml
docs/: AGENTS.md  architecture.mmd  fullSpec.md  milestone-1-2-agent-task.md  milestone-1-3-agent-task.md  miniSpec.md
src/archgen/: __init__.py  detection.py  graph.py  graph_builder.py  scanner.py  summary.py
src/archgen/detectors/: __init__.py  c_cpp.py  cache.py  database.py  docker.py  python_api.py  python_ast.py  tests.py
src/archgen/renderers/: __init__.py  mermaid.py
tests/: test_c_cpp_fixtures.py  test_cli.py  test_graph.py  test_mermaid.py  test_scanner.py
tests/fixtures/c_cli_encoder_decoder/: Makefile
tests/fixtures/c_cli_encoder_decoder/include/: bitreader.h  bitwriter.h  decoder.h  encoder.h  file_storage.h
tests/fixtures/c_cli_encoder_decoder/src/: bitreader.c  bitwriter.c  decoder.c  encoder.c  file_storage.c  main.c
tests/fixtures/c_http_server/: CMakeLists.txt
tests/fixtures/c_http_server/include/: http.h  queue.h  server.h  storage.h  threadpool.h
tests/fixtures/c_http_server/src/: http.c  main.c  queue.c  server.c  storage.c  threadpool.c
tests/fixtures/cpp_cmake_project/: CMakeLists.txt
tests/fixtures/cpp_cmake_project/include/: app.hpp
tests/fixtures/cpp_cmake_project/include/core/: engine.hpp
tests/fixtures/cpp_cmake_project/src/: app.cpp  main.cpp
tests/fixtures/cpp_cmake_project/src/core/: engine.cpp
