[project]
name = "archgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kirk", email = "kirkp0108@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.4",
]

[project.scripts]
archgen = "archgen:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
